# student-score-management-system

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh  main.cpp  main.db  run.sh  studentScoreSystem
linux-version/: CMakeLists.txt  a.out  main.cpp  main_database.db  studentScoreSystem
linux-version/src/: main.cpp  try.db
src/: asterisk.cpp  main.cpp  sqlite_query.cpp  sqlite_query.h
windows-version/: main.cpp
